YelpCamp/v4/readme.md
# YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:
    * Name
    * Image


# Layout and Basic Styling
 * Create Our header and footer partials
 * Add in Bootstrap


# Creating New Campgrounds
 * Setup New Campground Post Route
 * Add in body-parser
 * setup Route to show Form
 * Add Basic Unstyled Form


# Style the campgrounds page
 * Add a better header/title
 * Make campgrounds display in a grid


# Style the Navbar and Form
 * Add a navbar to all templates
 * Style the new campground form

# Add Mongoose
 * Install and Configure Mongoose
 * Setup Campground Model
 * Use Campground Model inside of Our Routes!

# Show Page
 * Review the RESTful routes we've seen so far
 * Add description to our campground model
 * Show db.collection.drop()
 * Add a show route/template

# Refactor Mongoose Code
* Create a Models Directory
* Use module.exports
* Require everything correctly!

# Add Seeds File
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add the Comment Model!
* Dispaly comments on campground show page

# Comment New/Create
* Nested routes
* Add the comment new and create routes
* Add the new comment form


RESTFUL ROUTES
name          url                             verb             desc.
========================================================================================
INDEX       /dogs                             GET         Display a list of all dogs
NEW        /dogs/new                          GET         Display Form to make a new dog
CREATE     /dogs                              POST        Add New Dog to DB
SHOW       /dogs/:id                          GET         Shows Info About One Dog

INDEX     /campgrounds                        GET
NEW       /campgrounds/new                    GET
CREATE    /campgrounds                        POST
SHOW      /campgrounds/:id                    GET

NEW      /campgrounds/:id/comments/new        GET
CREATE   /campgrounds/:id/comments            POST 